# pspplot

./: .gitignore  README.md  pyproject.toml
src/pspplot/: __init__.py  plot.py  plotfunc.py
